# nao_interaction

nao_interaction_msgs/: CMakeLists.txt
nao_interaction_msgs/msg/: Emotion.msg  Face.msg  Person.msg  Persons.msg
nao_interaction_viz/: CMakeLists.txt  package.xml  person_rviz_plugin.xml
nao_interaction_viz/config/: display_emotion.rviz
nao_interaction_viz/meshes/: rviz_body.stl
nao_interaction_viz/src/: CMakeLists.txt  person_display.cpp  person_display.h  person_shape.cpp  person_shape.h  person_visual.cpp  person_visual.h
